# thomas_fermi_model_cuda

./: CMakeLists.txt  f_utils.c  f_utils.cu  f_utils.h  f_utils.hpp  main.c  main.cpp
